compiler-core/src/error/snapshots/gleam_core__error__tests__io_copy_directory_error.snap
---
source: compiler-core/src/error/tests.rs
expression: error
---
error: File IO failure

An error occurred while trying to copy this directory:

    /src

To:

    /dest

The error message from the file IO library was:

    Critical error!
