compiler-core/src/error/snapshots/gleam_core__error__tests__io_copy_directory_not_found_error.snap
---
source: compiler-core/src/error/tests.rs
expression: error
---
error: File IO failure

An error occurred while trying to copy this directory:

    /src

To:

    /dest

This directory does not exist.
