compiler-core/src/error/snapshots/gleam_core__error__tests__io_find_parent_of_directory_not_found_error.snap
---
source: compiler-core/src/error/tests.rs
expression: error
---
error: File IO failure

An error occurred while trying to find the parent of this directory:

    /dir

This directory does not exist.
